--- a/src/components/HeroProductCard/index.module.scss
+++ b/src/components/HeroProductCard/index.module.scss
@@ -1,14 +1,14 @@
 .container {
-  width: 80%;
+  width: 100%;
   min-height: 60vh;
   display: flex;
   border-radius: 10px;
   overflow: hidden;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: all 0.3s ease;
-  margin: 10vh 0;
+  margin: 0vh 0 10vh 0;
   max-width: 1500px;
-  margin: 20vh 0;
+  // margin: 20vh 0;
   color: black;
 
   .textSection {
