--- a/src/pages/contactUs/index.module.scss
+++ b/src/pages/contactUs/index.module.scss
@@ -53,7 +53,7 @@
             outline: none;
             background-color: transparent;
             color: black;
-
+            width: 100%;
             &::placeholder {
               font-size: 10px;
             }
