careers and api integrated

--- a/src/components/ServicesCard/index.module.scss
+++ b/src/components/ServicesCard/index.module.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   color: white;
   position: relative;
+  cursor: pointer;
   .cardImg {
     position: absolute;
     bottom: 0;
